Bug 162586 - Crash after exporting an odt document to pdf
Summary: Crash after exporting an odt document to pdf
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
24.8.0.3 release
Hardware: All All
: high major
Assignee: Xisco Faulí
URL:
Whiteboard: target:25.2.0 target:24.8.2 target:24...
Keywords: bibisected, bisected, regression
: 162591 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-08-23 07:30 UTC by documentfoundation.d515p
Modified: 2024-09-05 13:38 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
The odt file that is crashing LibreOfffice while exporting it to pdf (973.36 KB, application/vnd.oasis.opendocument.text)
2024-08-23 14:40 UTC, documentfoundation.d515p
Details

Note You need to log in before you can comment on or make changes to this bug.
Description documentfoundation.d515p 2024-08-23 07:30:16 UTC
Description:
Hey guys.
I have created an odt file using libreoffice on a older version and was able to export it to pdf without a problem.
yesterday i updated LibreOffice to the latest version (Version: 24.8.0.3) on my MacOS (Apple silicon)
i opened the odt file i created a while now, edited it and tried to export it to pdf. Every single time it crashed.

Steps to Reproduce:
1. create an odt file
2.export to pdf
3.crash

Actual Results:
trying to save an odt file to pdf while using the export feature

Expected Results:
save to pdf


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.8.0.3 (X86_64) / LibreOffice Community
Build ID: 0bdf1299c94fe897b119f97f3c613e9dca6be583
CPU threads: 8; OS: macOS 14.6.1; UI render: Skia/Metal; VCL: osx
Locale: en-US (en_CH.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2024-08-23 13:38:08 UTC
Thank you for reporting the bug. Please attach a sample document, as this makes it easier for us to verify the bug. 
I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' once the requested document is provided.
(Please note that the attachment will be public, remove any sensitive information before attaching it. 
See https://wiki.documentfoundation.org/QA/FAQ#How_can_I_eliminate_confidential_data_from_a_sample_document.3F for help on how to do so.)
Comment 2 documentfoundation.d515p 2024-08-23 14:40:36 UTC
Created attachment 195984 [details]
The odt file that is crashing LibreOfffice while exporting it to pdf
Comment 3 Xisco Faulí 2024-08-23 14:56:25 UTC
Regression introduced by:

author	Tibor Nagy <tibor.nagy.extern@allotropia.de>	2024-07-05 14:40:11 +0200
committer	Nagy Tibor <tibor.nagy.extern@allotropia.de>	2024-07-08 18:19:26 +0200
commit 611dc34f19deab7f13d00a4058f6a6ac6b50edb2 (patch)
tree 7574989df4e8a7abafe70fa2e385d8558354b0f3
parent 3d0411ef53ccd6bb0af21b69aa557f1f40beffd0 (diff)
tdf#159900 sw: fix Figure tag placement attribute when exporting to PDF

Bisected with: bibisect-linux64-25.2
Comment 4 Xisco Faulí 2024-08-23 15:37:59 UTC
https://gerrit.libreoffice.org/c/core/+/172322
Comment 5 Commit Notification 2024-08-23 19:41:08 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/659842c2048aad10e7793f5e80fdc4956d9274d3

tdf#162586: Check GetUpper is not nullptr

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-08-26 01:53:34 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/24304cc6abc2f583b0fcf47e8030a9c8d985f9a9

tdf#162586: Check GetUpper is not nullptr

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2024-08-28 05:32:31 UTC
*** Bug 162591 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2024-09-05 13:38:08 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-24-8-1":

https://git.libreoffice.org/core/commit/96d785c4140c9e96d198046cd078f728ebd227bb

tdf#162586: Check GetUpper is not nullptr

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.