tdf#162586: Check GetUpper is not nullptr

Change-Id: I3d56edda8de16a2d04d8f902d3db340fc191a506
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172322
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Tested-by: Jenkins